next:
    - build with gradle
    - unused class Version removed
	- InvalidRequestException
	- flex routing

0.13.0:
	- ExecutionException: common base class for ActionExecutionException and ProcessingException, used in Processor
	- ActionExecution throws ActionExecutionExeptions directly.
	- CookieSetting: interface that allows actions to set cookies.
	- ModelHelper: self deprecated; pass current action via request attribute 
	- empty suffix registered for web actions
	- errors in action declarations cause ServletExceptions. application won't start.
	- Controller moved to de.highbyte_le.weberknecht.Controller
	- additional action view processors configurable
	- ActionViewProcessorFactory, ActionViewProcessor and other view processors moved to ...request.view
	- ActionViewProcessor.processView() returns, if sth. was processed
	- introduced interfaces: DataView, FeedView, WebView, JsonView and AutoView
	- DataAction2 renamed to DataAction
	- DataAction.writeData() throws ActionExecutionException
	- The method needsDatabase of the interface DatabaseCapable was dropped and actions that need a database just have to implement the interface.
	- AdditionalDatabaseCapable removed.
	- generic beans removed
	- ReqUtil removed
	- AreaCapableRouter is now default
	- MetaRouter introduced and ability to use more than one router
	- sub areas introduced
	- router interface changed
	- router not shared across requests
	- routers can implement DatabaseCapable and Configurable
	- now it is possible to use the controller servlet with prefix mapping  
	- LocalePrefixRouter and Localizable added
	- LocaleMatcher
	- actions don't throw ServletExceptions any more.
	- WebAction.getModels() throws ContentProcessingException
	- RedirectException
	- execute() in actions without HttpServletResponse
	- Action renamed to WebAction
	- optional ActionBase introduced
	- rpx-stuff moved to separate project
	- build number and Version.DEFAULT was dropped
	- processors can implement Configurable